# walldisplay

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  appcfg_nvs.csv  cliff.toml  hacs.json  main.py  partitions.csv  pyproject.toml  sdkconfig.defaults  sdkconfig.esp32dev
.devcontainer/: devcontainer-lock.json
.forgejo/workflows/: release-firmware.yaml
.github/workflows/: hacs-branch-preview.yml  hacs.yml
ai-prompts/: CodeReview.md  MQTT.md  NVS.md  README.md  StyleGuide.md  WiFi.md
config/: home_assistant_automation.yaml  panel_config.example.yaml
config/custom_components/walldisplay_sync/: __init__.py  artwork.py  button.py  config_flow.py  const.py  (+4 more)
custom_components/walldisplay_sync/: __init__.py  button.py  config_flow.py  const.py  event.py  manifest.json  runtime.py  strings.json
include/walldisplay/: app_config.h  device_info.h  display_board.h  display_dimming.h  display_power_policy.h  ha_discovery.h  media_artwork.h  media_widget.h  mqtt_app.h  ota_manager.h  panel_component.hpp  screenshot.h  ui.h  ui_assets.h  ui_font_noto_16.h  ui_font_temperature_28_bold.h  ui_font_weather_symbols_14.h  wifi_manager.h
skills/project-maintenance/: SKILL.md
src/: CMakeLists.txt  app_config.c  app_main.c  device_info.c  display_board.c  display_dimming.c  display_power_policy.c  ha_discovery.c  idf_component.yml  media_artwork.c  media_artwork.cpp  media_widget.cpp  mqtt_app.c  ota_manager.c  screenshot.c  ui.c  ui_assets.c  ui_font_noto_16.c  ui_font_temperature_28_bold.c  ui_font_weather_symbols_14.c  wifi_manager.c
src/assets/: panel_background.rgb565
src/assets/weather/: weather_clear_night.argb8888  weather_cloudy.argb8888  weather_fog.argb8888  weather_lightning.argb8888  weather_lightning_rainy_day.argb8888  weather_lightning_rainy_night.argb8888  weather_partly_cloudy_day.argb8888  weather_partly_cloudy_night.argb8888  weather_pouring.argb8888  weather_rainy.argb8888  weather_snowy.argb8888  weather_snowy_rainy.argb8888  weather_sunny.argb8888
tests/: run_unit_tests.sh  test_display_power_policy.c
tools/: capture_screenshots.sh  generate_app_config_defaults.py
(+2 files in other folders)
